Added base markup

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-First Page
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Personal blog</title>
+	</head>
+	
+	<body>
+		<h3>First Page</h3>
+	</body>
+</html>
