--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Personal blog</title>
+		<title>Pratik Kanthi</title>
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<style type="text/css">
+			body{
+				font-family: 'Roboto';
+			}
+
+			.container{
+				width: 500px;
+				margin: 0 auto;
+				text-align: center;
+			}
+		</style>
 	</head>
 	
 	<body>
-		<h3>First Page</h3>
+		<div class="container">		
+			<h3>Please come back later</h3>
+			<p> Hey! Thanks for visiting. Apparantely, I haven't found the time to build this site.</p>
+
+			<h4>Here's a random fun fact to make it worth your while</h4>
+			<div id="twitter-fact">
+			</div>
+		</div>
+
 	</body>
 </html>
