--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Pratik Kanthi</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<style type="text/css">
 			body{
 				font-family: 'Roboto';
@@ -13,18 +14,41 @@
 				margin: 0 auto;
 				text-align: center;
 			}
+			#random_quote{
+				margin-top: 100px;
+			}
+
+			#random_quote p{
+				font-style: italic;
+			}
 		</style>
+		<script type="text/javascript">
+			function randomQuote() {
+			  $.ajax({
+			      url: "https://api.forismatic.com/api/1.0/?",
+			      dataType: "jsonp",
+			      data: "method=getQuote&format=jsonp&lang=en&jsonp=?",
+			      
+			      success: function( response ) {
+			        $("#random_quote").html("<h4>Here's a random quote to make it worth your while</h4><p  class='lead text-center'>" +
+			          response.quoteText + "<br/>&dash; " + response.quoteAuthor + " &dash;</p>");
+			      }
+			  });
+			}
+		</script>
 	</head>
 	
 	<body>
 		<div class="container">		
 			<h3>Please come back later</h3>
-			<p> Hey! Thanks for visiting. Apparantely, I haven't found the time to build this site.</p>
+			<p> Hey! Thanks for visiting. Apparently I haven't found the time to build this site.</p>
 
-			<h4>Here's a random fun fact to make it worth your while</h4>
-			<div id="twitter-fact">
+			
+			<div id="random_quote">
 			</div>
 		</div>
-
+		<script type="text/javascript">
+			$(document).ready(randomQuote);
+		</script>
 	</body>
 </html>
