--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
 			}
 			#random_quote{
 				margin-top: 100px;
+				min-height: 160px;
 			}
 
 			#random_quote p{
 				font-style: italic;
+			}
+
+			.social{
+				margin-top: 200px;
+			}
+			.social img{
+				padding: 10px;
 			}
 		</style>
 		<script type="text/javascript">
@@ -45,6 +53,15 @@
 
 			
 			<div id="random_quote">
+			</div>
+
+
+			<div class="social">
+				<p>Meanwhile, you can follow me on:</p>
+				<a href="https://facebook.com/mytextbook"><img height="16" width="16" src="https://image.flaticon.com/icons/svg/33/33702.svg"/></a>
+				<a href="https://www.linkedin.com/in/pratikanthi/"><img height="16" width="16" src="https://image.flaticon.com/icons/svg/34/34227.svg"/></a>
+				<a href="https://twitter.com/pratikanthi"><img height="16" width="16" src="https://image.flaticon.com/icons/svg/34/34238.svg"/></a>
+				<a href="https://github.com/pratikanthi"><img height="16" width="16" src="https://image.flaticon.com/icons/svg/25/25231.svg"/></a>
 			</div>
 		</div>
 		<script type="text/javascript">
